Fix open-api and change some fields name
